<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/containerMain"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MovieListActivity"
    android:background="@color/black">

    <ImageView
        android:id="@+id/ivBgHome"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:contentDescription="@string/bg_home"
        android:scaleType="centerCrop"
        android:src="@drawable/bg"
        android:transitionName="imageSpecimen"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textAppearance="?attr/textAppearanceHeadline3"
        android:textColor="@color/white"
        android:textSize="40sp"
        android:textStyle="bold"
        android:elevation="3dp"
        app:layout_constraintBottom_toBottomOf="@+id/ivBgHome"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/ivBgHome"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <View
                android:layout_width="match_parent"
                android:layout_height="320dp"
                android:background="@drawable/gradient_bg"
                app:layout_constraintBottom_toTopOf="@+id/scrollView2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="-20dp"
                android:backgroundTint="@color/black"
                android:elevation="10dp"
                app:cardCornerRadius="25dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="16dp"
                        android:layout_marginEnd="16dp"
                        android:text="@string/popular"
                        android:textAppearance="?attr/textAppearanceSubtitle2"
                        android:textColor="@android:color/white"
                        android:textSize="22sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginEnd="16dp"
                        android:text="@string/most_popular_movies"
                        android:textAppearance="?attr/textAppearanceSubtitle1"
                        android:textColor="@color/white"
                        android:textSize="18sp" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/rvMoviesPopular"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:clipToPadding="false"
                        android:paddingStart="16dp"
                        android:paddingEnd="16dp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="16dp"
                        android:layout_marginEnd="16dp"
                        android:text="@string/latest"
                        android:textAppearance="?attr/textAppearanceSubtitle2"
                        android:textColor="@android:color/white"
                        android:textSize="22sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginEnd="16dp"
                        android:text="@string/most_popular_movies"
                        android:textAppearance="?attr/textAppearanceSubtitle1"
                        android:textColor="@color/white"
                        android:textSize="18sp" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/rvMoviesLatest"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:clipToPadding="false"
                        android:paddingStart="16dp"
                        android:paddingEnd="16dp" />

                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>

        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>